<resources>
    <string name="app_name">HW04_Gymlog_V3.0.0</string>
    <string name="exercise">Exercise</string>
    <string name="enter_exercise">Enter exercise</string>
    <string name="weight">weight</string>
    <string name="enter_a_weight">Enter a weight</string>
    <string name="enter_reps">Enter reps</string>
    <string name="reps">Reps</string>
    <string name="log">Log</string>
    <string name="nothing_to_show_time_to_hit_the_gym">Nothing to show, time to hit the gym!</string>
    <string name="login_welcome">Welcome to the GymLog.\nPlease Sign in.</string>
    <string name="username">UserName</string>
    <string name="password">Password</string>
    <string name="login">Login!</string>
    <string name="preference_file_key">daclinkPreferenceFileNameGymLog</string>
    <string name="preference_userId_key">daclinkPreferenceUserIdKeyGymLog</string>
</resources>